--- a/web bien/castellano.css
+++ b/web bien/castellano.css
@@ -136,21 +136,142 @@ a{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @media screen and (max-width:480px) {
+body{
+    margin: 0 ;
+    font-size: 18px;
+  }
+  #arriba{
+    width: 100%;
+    height: 205px;
+    clear: both;
+    position: fixed;
+    z-index: 10;
+
+  }
+  #idioma{
+    width: 35%;
+    height: 100px;
+    margin: 0 0 0 65%;
+
+  }
+  .ca{
+    width: 25%;
+    height: 10px;
+    margin: 0 -10% 0 28%;
+    float: left;
+    text-align: right;
+    padding-top: 60px;
+    font-size: 0.7em;
+  }
+  #logo{
+    width: 16%;
+    margin: 10px 0 0 30px;
+    float: left;
+  }
+  #medio{
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+  }
+  #texto{
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 60px;
+    width: 40%;
+    margin: 0 30% 0 30%;
+    text-align: center;
+    padding: 30px 0 0 0;
+    font-size: 0.6em;
+  }
+  #textos{
+    width: 100%;
+    height: 240px;
+    position: absolute;
+    margin-top: 20%;
+  }
+  #texto1{
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 60px;
+    width: 50%;
+    text-align: center;
+    padding: 30px 0 0 0;
+    margin: 10px 25% 0 25%;
+    font-size: 0.8em;
+  }
+  #fondo{
+    width: 100%;
+    height: 100%;
+  }
+  #blog{
+    background-color: blue;
+    width: 100%;
+    height: 1000px;
+    position: absolute;
+    margin-top: -10px;
+  }
+  #secciones{
+    width: 80%;
+    height: 50px;
+    margin: 0 10% 0 10%;
+    position: relative;
+    z-index: 15;
+    background-color: red;
+  }
+  .secc{
+     width:15%;
+     height: 30px;
+     float: left;
+    text-align: left;
+    margin-top: 100px;
+    margin-left: 8%;
+    font-size: 0.6em;
+  }
+  #nosotros{
+    width: 60%;
+    height: 100px;
+
+    margin: % 20% 0 20%;
+  }
+  #abajo{
+  width: 100%;
+  height: 200px;
+  background-color: black;
+  position:absolute;
+  margin-top: 2000px;
+  }
+  #flecha{
+    width: 4%;
+    height: 50px;
+    background-color: white;
+    border-radius: 50px;
+    text-align: center;
+    padding-top: 5px;
+    margin: -1% 48% 0 48%;
+    style-type: none;
+  }
+  #redes{
+    width: 20%;
+    margin: 2% 40% 0 40%;
+  }
+  .img{
+    width: 23%;
+  }
+  .tiendas{
+  width: 100%;
+  height: 30px;
+  display: none;
+  list-style-type: none;
+  padding: 10px 0 0 0;
+  }
+  #secciones .secc:hover > .tiendas{
+    display: block;
+
+  }
+  a{
+    text-decoration: none;
+  }
+
+
 
 
 }
