--- a/web bien/castellanomov.css
+++ b/web bien/castellanomov.css
@@ -1,21 +1,21 @@
-@media screen and (max-width:480px) {
+@media screen and (max-width:380px) {
 
 body{
     margin: 0 ;
-    font-size: 18px;
+
   }
   #arriba{
     width: 100%;
-    height: 205px;
+    height: 30px;
     clear: both;
     position: fixed;
-    z-index: 10;
+    z-index: 1;
 
   }
   #idioma{
-    width: 35%;
-    height: 100px;
-    margin: 0 0 0 65%;
+    width: 40%;
+    height: 50px;
+    margin: 0 0 0 60%;
 
   }
   .ca{
@@ -24,8 +24,9 @@ body{
     margin: 0 -10% 0 28%;
     float: left;
     text-align: right;
-    padding-top: 60px;
+    padding-top: 40px;
     font-size: 0.7em;
+
   }
   #logo{
     width: 16%;
@@ -36,15 +37,14 @@ body{
     width: 100%;
     height: 100px;
     position: absolute;
-
   }
   #texto{
     background-color: rgba(255, 255, 255, 0.76);
-    height: 60px;
-    width: 40%;
-    margin: 0 30% 0 30%;
+    height: 30px;
+    width: 60%;
+    margin: 5% 20% 0 20%;
     text-align: center;
-    padding: 30px 0 0 0;
+    padding: 15px 0 0 0;
     font-size: 0.6em;
   }
   #textos{
@@ -55,11 +55,11 @@ body{
   }
   #texto1{
     background-color: rgba(255, 255, 255, 0.76);
-    height: 60px;
-    width: 50%;
+    height: 50px;
+    width: 70%;
     text-align: center;
-    padding: 30px 0 0 0;
-    margin: 10px 25% 0 25%;
+    padding: 15px 0 0 0;
+    margin: 10px 15% 0 15%;
     font-size: 0.8em;
   }
   #fondo{
@@ -67,37 +67,36 @@ body{
     height: 100%;
   }
   #blog{
-
     width: 100%;
     height: 700px;
     position: absolute;
     margin-top: -10px;
   }
   #secciones{
-    width: 80%;
+    width: 100%;
     height: 30px;
-    margin: 0 10% 0 10%;
+    margin: 0 0% 0 0%;
     position: relative;
     z-index: 15;
-
     clear: both;
+
   }
   .secc{
      width:20%;
      margin-top: 0px;
-     height: 30px;
+     height: 10px;
      float: left;
-    text-align: left;
-    margin: 0 0 0 2%;
-    font-size: 0.6em;
+    text-align: center;
+    margin: 0 0 0 0 ;
+    font-size: 0.7em;
+    padding-top: 20px;
 
-    padding-top: 15px;
   }
   #nosotros{
-    width: 60%;
+    width: 90%;
     height: 100px;
     padding-top: 50px;
-    margin: 0 20% 0 20%;
+    margin: 0 5% 0 5%;
   }
   #abajo{
   width: 100%;
