--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -1,4 +1,10 @@
-@media screen and (max-width:380px) {
+@media screen and (max-width:480px) {
+  body{
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+    line-height: 1rem;
+  }
   #arriba{
     width: 100%;
     height: 30px;
@@ -74,7 +80,6 @@
     position: relative;
     z-index: 15;
     clear: both;
-
   }
   .secc{
      width:20%;
@@ -83,7 +88,7 @@
      float: left;
     text-align: center;
     margin: 0 0 0 0 ;
-    font-size: 0.7em;
+    font-size: 0.8rem;
     padding-top: 20px;
 
   }
