--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -1,16 +1,14 @@
-@media screen and (max-width:480px) {
+@media screen and (max-width:380px) {
   body{
-    margin: 0;
-    padding: 0;
-    font-size: 0.9rem;
-    line-height: 1rem;
+    font-size: 14px;
+    line-height: 18px;
   }
   #arriba{
     width: 100%;
     height: 30px;
     clear: both;
     position: fixed;
-    z-index: 1;
+    z-index: 10;
 
   }
   #idioma{
@@ -38,6 +36,7 @@
     width: 100%;
     height: 100px;
     position: absolute;
+
   }
   #texto{
     background-color: rgba(255, 255, 255, 0.76);
@@ -66,30 +65,34 @@
   #fondo{
     width: 100%;
     height: 100%;
+    z-index: 10;
   }
   #blog{
     width: 100%;
     height: 700px;
     position: absolute;
     margin-top: -10px;
+    z-index: 15;
   }
   #secciones{
     width: 100%;
     height: 30px;
-    margin: 0 0% 0 0%;
+    margin: 0 0 0 0;
     position: relative;
     z-index: 15;
     clear: both;
+
   }
   .secc{
-     width:20%;
+     width:22%;
      margin-top: 0px;
      height: 10px;
      float: left;
     text-align: center;
     margin: 0 0 0 0 ;
-    font-size: 0.8rem;
+    font-size: 0.9em;
     padding-top: 20px;
+
 
   }
   #nosotros{
@@ -103,13 +106,13 @@
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
-      background-color: green;
+
       border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #nunoya{
     clear: both;
     width: 100%;
-    background-color: green;
+
     height: 850px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
@@ -117,7 +120,7 @@
   #norma{
     clear: both;
     width: 100%;
-    background-color: green;
+
     height: 850px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
@@ -125,7 +128,7 @@
   #otonashi{
     clear: both;
     width: 100%;
-    background-color: green;
+
     height: 850px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
@@ -134,7 +137,6 @@
   #haiku{
     clear: both;
     width: 100%;
-    background-color: green;
     height: 850px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
@@ -159,16 +161,17 @@
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 1000px;
+  margin-top: 4660px;
   }
   #flecha{
-    width: 16%;
+    width: 20%;
     height: 50px;
     background-color: white;
     border-radius: 50px;
     text-align: center;
     padding-top: 5px;
-    margin: -5% 42% 0 42%;
+    padding-left: 40px;
+    margin: -5% 40% 0 38%;
     style-type: none;
   }
   #redes{
