--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -164,16 +164,17 @@
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 1000px;
+  margin-top: 4650px;
   }
   #flecha{
-    width: 16%;
+    width: 20%;
     height: 50px;
     background-color: white;
     border-radius: 50px;
     text-align: center;
     padding-top: 5px;
-    margin: -5% 42% 0 42%;
+    padding-left: 50px;
+    margin: -5% 40% 0 35%;
     style-type: none;
   }
   #redes{
