--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -20,7 +20,7 @@
 
   }
   .ca{
-    width: 25%;
+    width: 20%;
     height: 10px;
     margin: 0 -10% 0 28%;
     float: left;
@@ -40,12 +40,12 @@
     position: absolute;
   }
   #texto{
-
+    background-color: rgba(255, 255, 255, 0.76);
     height: 30px;
     width: 60%;
     margin: 5% 20% 0 20%;
     text-align: center;
-    padding: 5px 0 0 0;
+    padding: 10px 0 0 0;
     font-size: 1.5em;
   }
   #textos{
@@ -56,7 +56,7 @@
   }
   #texto1{
     background-color: rgba(255, 255, 255, 0.76);
-    height: 50px;
+    height: 40px;
     width: 70%;
     text-align: center;
     padding: 15px 0 0 0;
@@ -74,6 +74,7 @@
     position: absolute;
     margin-top: -10px;
     z-index: 15;
+    background-color: white;
   }
   #secciones{
     width: 100%;
@@ -102,36 +103,37 @@
     height: 100px;
     padding-top: 50px;
     margin: 0 5% 0 5%;
+    background-color: white;
   }
   #madame{
-      height: 1000px;
+      height: 500px;
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
-
+      background-color: white;
       border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #nunoya{
     clear: both;
     width: 100%;
-
-    height: 850px;
+    background-color: white;
+    height: 550px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #norma{
     clear: both;
     width: 100%;
-
-    height: 850px;
+    background-color: white;
+    height: 500px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #otonashi{
     clear: both;
     width: 100%;
-
-    height: 850px;
+    background-color: white;
+    height: 500px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
@@ -139,8 +141,8 @@
   #haiku{
     clear: both;
     width: 100%;
-
-    height: 850px;
+    background-color: white;
+    height: 500px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
@@ -164,7 +166,7 @@
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 4650px;
+  margin-top: 3100px;
   }
   #flecha{
     width: 20%;
