--- a/web bien/restaurantemov.css
+++ b/web bien/restaurantemov.css
@@ -39,6 +39,12 @@
     height: 100px;
     position: absolute;
   }
+  #text{
+    background-color: red;
+    width: 100%;
+    height: 100px;
+    clear: both;
+  }
   #texto{
     background-color: rgba(255, 255, 255, 0.76);
     height: 30px;
@@ -46,7 +52,7 @@
     margin: 5% 20% 0 20%;
     text-align: center;
     padding: 10px 0 0 0;
-    font-size: 0.7em;
+    font-size: 1.5em;
   }
   #textos{
     width: 100%;
@@ -61,7 +67,7 @@
     text-align: center;
     padding: 15px 0 0 0;
     margin: 10px 15% 0 15%;
-    font-size: 1em;
+    font-size: 1.5em;
   }
   #fondo{
     width: 100%;
@@ -88,7 +94,6 @@
   .secc{
      width:15%;
      margin-top: 0px;
-
      height: 100px;
      float: left;
     text-align: center;
@@ -107,7 +112,7 @@
     background-color: white;
   }
   #madame{
-      height: 550px;
+      height: 650px;
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
@@ -118,7 +123,7 @@
     clear: both;
     width: 100%;
     background-color: white;
-    height: 690px;
+    height: 660px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
@@ -126,7 +131,7 @@
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 800px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
@@ -134,7 +139,7 @@
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 650px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
@@ -143,16 +148,16 @@
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 520px;
     padding: 20px 0 0 0;
     border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   }
 
   .grande{
-  width: 45%;
+  width: 97%;
   height: 40%;
   margin: 0 2% 5% 2%;
-  float: left;
+
   }
 
   .pequeña{
@@ -167,16 +172,16 @@
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 1050px;
+  margin-top: 7300px;
   }
   #flecha{
-    width: 30%;
+    width: 20%;
     height: 50px;
     background-color: white;
     border-radius: 50px;
     text-align: center;
     padding-top: 5px;
-    padding-left: 5px;
+    padding-left: 50px;
     margin: -5% 40% 0 35%;
     style-type: none;
   }
