--- a/web bien/restaurantes.css
+++ b/web bien/restaurantes.css
@@ -27,10 +27,11 @@ p{
   font-size: 1.3em;
 }
 #text{
-  background-color: red;
-  width: 100px;
-  width: 100%;
-  clear: both;
+
+
+  width: 85%;
+  margin: 7% 0 0 0;
+  text-align: justify;
 }
 #logo{
   width: 8%;
@@ -98,26 +99,26 @@ p{
 }
 #nosotros{
   width: 60%;
-  height: 4400px;
-  background-color: red;
+  height: 6900px;
+  
   margin: 10% 20% 0 20%;
 }
 h1{
   text-align: center;
 }
 #madame{
-  height: 1000px;
+  height: 500px;
   padding: 20px 0 0 0;
   clear: both;
-  background-color: green;
+
   border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
 }
 
 
 #nunoya{
   clear: both;
-  background-color: green;
-  height: 850px;
+
+  height: 500px;
   padding: 20px 0 0 0;
   border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
 }
@@ -125,22 +126,23 @@ h1{
   clear: both;
   padding: 20px 0 0 0;
   border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
-  height: 850px;
-  background-color: green;
+  height: 500px;
+
+
 }
 #norma{
   clear: both;
   padding: 20px 0 0 0;
   border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   height: 850px;
-  background-color: green;
+
 }
 #haiku{
   clear: both;
   padding: 20px 0 0 0;
   border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
   height: 850px;
-  background-color: green;
+
 }
 .grande{
 width: 40%;
@@ -164,7 +166,7 @@ height: 200px;
 background-color: black;
 position:absolute;
 clear: both;
-margin-top: 5000px;
+margin-top: 7000px;
 }
 #flecha{
   width: 3%;
