--- a/web bien/castellano.css
+++ b/web bien/castellano.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:769px) {
 body{
   margin: 0 ;
   font-size: 18px;
@@ -6,7 +7,7 @@ body{
   width: 100%;
   height: 205px;
   clear: both;
-  position: fixed;
+position: fixed;
   z-index: 10;
 
 }
@@ -14,7 +15,10 @@ body{
   width: 15%;
   height: 100px;
   margin: 0 0 0 85%;
-
+  z-index: 10;
+}
+#menu{
+   display: none;
 }
 .ca{
   width: 50%;
@@ -23,7 +27,6 @@ body{
   text-align: center;
   padding-top: 60px;
   font-size: 1.3em;
-
 }
 #logo{
   width: 8%;
@@ -131,4 +134,5 @@ padding: 10px 0 0 0;
 }
 a{
   text-decoration: none;
+}
 }
