--- a/web bien/ropa y accesorios.css
+++ b/web bien/ropa y accesorios.css
@@ -1,8 +1,7 @@
+@media screen and (min-width:769px) {
 body{
   margin: 0 ;
   font-size: 18px;
-  padding: 0;
-
 }
 p{
   text-align: left;
@@ -18,6 +17,10 @@ p{
   width: 15%;
   height: 100px;
   margin: 0 0 0 85%;
+  z-index: 10;
+}
+#menu{
+   display: none;
 }
 .ca{
   width: 50%;
@@ -165,19 +168,17 @@ background-color: black;
 position:absolute;
 clear: both;
 margin-top: 6700px;
-text-align: center;
+
 }
 #flecha{
   width: 4%;
   height: 50px;
   background-color: white;
   border-radius: 50px;
-  padding-top: 5px;
-  padding-left: 2%;
   text-align: center;
+  padding-top: 5px;
   margin: -1% 48% 0 48%;
   style-type: none;
-
 }
 #redes{
   width: 20%;
@@ -198,4 +199,5 @@ padding: 10px 0 0 0;
 }
 a{
   text-decoration: none;
+}
 }
