--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -4,107 +4,106 @@
     padding: 0;
     font-size: 1rem;
     line-height: 1.2rem;
+    width: 100%;
   }
+
   #arriba{
     width: 100%;
-    height: 30px;
+    height: 100px;
     clear: both;
-    position: fixed;
+    position: absolute;
     z-index: 10;
-
   }
+
   #idioma{
     width: 40%;
     height: 50px;
     margin: 0 0 0 60%;
-
   }
+
   .ca{
-    width: 20%;
-    height: 10px;
-    margin: 0 -10% 0 28%;
+    width: 50px;
     float: left;
-    text-align: right;
-    padding-top: 40px;
-    font-size: 0.75em;
-
+    text-align: center;
+    padding: 10% 5%;
+    font-size: 0.8rem;
+    z-index: 10;
   }
+
+  #secciones{
+    display: none;
+  }
+
   #logo{
     width: 16%;
-    margin: 10px 0 0 30px;
+    margin: 1% 0 0 1%;
     float: left;
+    position: relative;
+    z-index: 10;
   }
-  #medio{
+
+  #medio {
     width: 100%;
     height: 100px;
     position: absolute;
+    z-index: 6;
   }
-  #texto{
+
+  #menu {
+    width:60%;
+    float: left;
+    text-align: right;
+    position: relative;
+    z-index: 4;
+  }
+  #texto {
     background-color: rgba(255, 255, 255, 0.76);
-    height: 30px;
+    height: 40px;
     width: 60%;
     margin: 5% 20% 0 20%;
     text-align: center;
-    padding: 10px 0 0 0;
-    font-size: 1.5em;
+    padding: 7px 0 0 0;
+    font-size: 1em;
   }
+
   #textos{
     width: 100%;
     height: 240px;
     position: absolute;
     margin-top: 20%;
   }
+
   #texto1{
     background-color: rgba(255, 255, 255, 0.76);
     height: 40px;
     width: 70%;
     text-align: center;
-    padding: 15px 0 0 0;
+    padding: 7px 0 0 0;
     margin: 10px 15% 0 15%;
-    font-size: 1.5em;
+    font-size: 1em;
   }
+
   #fondo{
     width: 100%;
     height: 100%;
     z-index: 10;
   }
+
   #blog{
     width: 100%;
     height: 700px;
     position: absolute;
     margin-top: -10px;
     z-index: 15;
-    background-color: white;
   }
-  #secciones{
-    width: 100%;
-    height: 30px;
-    margin: 0 0% 0 0%;
-    position: relative;
-    z-index: 15;
-    clear: both;
 
-  }
-  .secc{
-     width:15%;
-     margin-top: 0px;
-     
-     height: 90px;
-     float: left;
-    text-align: center;
-    margin: 0 0 0 0 ;
-    font-size: 1rem;
-    padding: 10% 5% 0 5%;
-
-
-
-  }
   #nosotros{
     width: 90%;
     height: 100px;
     padding-top: 50px;
     margin: 0 5% 0 5%;
-    background-color: white;
+    position: relative;
+    z-index: 6;
   }
   #madame{
       height: 550px;
@@ -170,14 +169,14 @@
   margin-top: 3450px;
   }
   #flecha{
-    width: 20%;
-    height: 50px;
+    width: 15%;
+    height: 30px;
     background-color: white;
     border-radius: 50px;
     text-align: center;
     padding-top: 5px;
-    padding-left: 50px;
-    margin: -5% 40% 0 35%;
+    padding-left: 1px;
+    margin: -5% 43% 0 42%;
     style-type: none;
   }
   #redes{
@@ -202,5 +201,31 @@
   a{
     text-decoration: none;
   }
+  #nivel2-1{
+  width: 10%;
+  height: 100px;
+  }
+
+
+
+  #menu{
+    width: 85%;
+    margin: 0 0% 0 0;
+    z-index: 15;
+    font-size: 0.8rem;
+
+  }
+  #menu * { list-style:none; }
+  #menu li{ line-height:180%; }
+  #menu li a{color:#222; text-decoration:none; }
+  #menu li a:before{ content:"\025b8"; color:#ddd; margin-right:4px;}
+  #menu input[name="list"] {
+    position: absolute;
+    left: -1000em;
+    }
+  #menu label:before{ content:"\025b8"; margin-right:4px;}
+  #menu input:checked ~ label:before{ content:"\025be";}
+  #menu .interior{display: none;}
+  #menu input:checked ~ ul{display:block;}
 
 }
