--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -6,7 +6,6 @@
     line-height: 1.2rem;
     width: 100%;
   }
-
   #arriba{
     width: 100%;
     height: 100px;
@@ -14,26 +13,32 @@
     position: absolute;
     z-index: 10;
   }
-
   #idioma{
-    width: 40%;
+    width: 50%;
     height: 50px;
-    margin: 0 0 0 60%;
+    margin: 0 0 0 50%;
+    text-decoration-color: white;
   }
 
+#arriba  a{
+  color: white;
+}
+a:active{
+  color: black pink;
+}
   .ca{
-    width: 50px;
+    color: white;
+    width: 55px;
     float: left;
     text-align: center;
-    padding: 10% 5%;
+    padding: 10% 6%;
     font-size: 0.8rem;
     z-index: 10;
-  }
 
+  }
   #secciones{
     display: none;
   }
-
   #logo{
     width: 16%;
     margin: 1% 0 0 1%;
@@ -41,20 +46,24 @@
     position: relative;
     z-index: 10;
   }
-
   #medio {
     width: 100%;
     height: 100px;
     position: absolute;
     z-index: 6;
   }
-
   #menu {
     width:60%;
     float: left;
     text-align: right;
     position: relative;
     z-index: 4;
+  }
+  #text{
+
+    height: 200px;
+    clear: both;
+
   }
   #texto {
     background-color: rgba(255, 255, 255, 0.76);
@@ -65,14 +74,12 @@
     padding: 7px 0 0 0;
     font-size: 1em;
   }
-
   #textos{
     width: 100%;
     height: 240px;
     position: absolute;
     margin-top: 20%;
   }
-
   #texto1{
     background-color: rgba(255, 255, 255, 0.76);
     height: 40px;
@@ -82,13 +89,11 @@
     margin: 10px 15% 0 15%;
     font-size: 1em;
   }
-
   #fondo{
     width: 100%;
     height: 100%;
     z-index: 10;
   }
-
   #blog{
     width: 100%;
     height: 700px;
@@ -96,7 +101,6 @@
     margin-top: -10px;
     z-index: 15;
   }
-
   #nosotros{
     width: 90%;
     height: 100px;
@@ -106,54 +110,51 @@
     z-index: 6;
   }
   #madame{
-      height: 550px;
+      height: 710px;
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
       background-color: white;
-      border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #nunoya{
     clear: both;
     width: 100%;
     background-color: white;
-    height: 690px;
+    height: 720px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+    border-top: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #norma{
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 710px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+    border-top: 5px rgba(209, 209, 202, 0.89) solid;
   }
   #otonashi{
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 710px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+    border-top: 5px rgba(209, 209, 202, 0.89) solid;
   }
-
   #haiku{
     clear: both;
     width: 100%;
     background-color: white;
-    height: 550px;
+    height: 400px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+    border-top: 5px rgba(209, 209, 202, 0.89) solid;
   }
-
   .grande{
   width: 45%;
   height: 40%;
   margin: 0 2% 5% 2%;
   float: left;
   }
-
   .pequeña{
     padding: 20px 0 0 0;
     width: 31%;
@@ -166,7 +167,7 @@
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 3450px;
+  margin-top: 4110px;
   }
   #flecha{
     width: 15%;
@@ -174,7 +175,7 @@
     background-color: white;
     border-radius: 50px;
     text-align: center;
-    padding-top: 5px;
+    padding-top: 1px;
     padding-left: 1px;
     margin: -5% 43% 0 42%;
     style-type: none;
@@ -196,7 +197,6 @@
   }
   #secciones .secc:hover > .tiendas{
     display: block;
-
   }
   a{
     text-decoration: none;
@@ -205,15 +205,11 @@
   width: 10%;
   height: 100px;
   }
-
-
-
   #menu{
     width: 85%;
     margin: 0 0% 0 0;
     z-index: 15;
     font-size: 0.8rem;
-
   }
   #menu * { list-style:none; }
   #menu li{ line-height:180%; }
@@ -227,5 +223,4 @@
   #menu input:checked ~ label:before{ content:"\025be";}
   #menu .interior{display: none;}
   #menu input:checked ~ ul{display:block;}
-
 }
