--- a/web bien/sintesis.css
+++ b/web bien/sintesis.css
@@ -14,23 +14,24 @@ body{
   background-color: red;
   width: 100%;
   height: 80%;
-  top: -250px;
+
   position: relative;
 
 }
 #catala{
 height: 50px;
-width: 10%;
+width: 20%;
 border: 3px white solid;
 display: inline-block;
-margin: 0 0 0 40%;
+margin: 0 0 0 30%;
 text-align: center;
 font-size: 1em;
 }
 #castellano{
 display: inline-block;
 height: 50px;
-width: 10%;
+margin: 0 0 0 0;
+width: 20%;
 border: 3px white solid;
 text-align: center;
 }
