--- a/web bien/ropa y accesoriosmov.css
+++ b/web bien/ropa y accesoriosmov.css
@@ -59,10 +59,6 @@ a:active{
     position: relative;
     z-index: 4;
   }
-  #text{
-    height: 200px;
-    clear: both;
-  }
   #texto {
     background-color: rgba(255, 255, 255, 0.76);
     height: 40px;
@@ -107,12 +103,38 @@ a:active{
     position: relative;
     z-index: 6;
   }
+  #text{
+    font-size: 1rem;
+    line-height: 1.2rem;
+    clear: both;
+
+  }
+  #text1{
+
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text2{
+
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text3{
+    height: 40px;
+    clear: both;
+
+    border-bottom: 5px rgb(207, 214, 212) solid;
+  }
   #madame{
-      height: 710px;
+      height: 600px;
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
-      background-color: white;
+
 
   }
   #nunoya{
@@ -121,7 +143,7 @@ a:active{
     background-color: white;
     height: 720px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #norma{
     clear: both;
@@ -129,7 +151,7 @@ a:active{
     background-color: white;
     height: 710px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #otonashi{
     clear: both;
@@ -137,15 +159,15 @@ a:active{
     background-color: white;
     height: 710px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #haiku{
     clear: both;
     width: 100%;
     background-color: white;
-    height: 740px;
+    height: 640px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   .grande{
   width: 45%;
@@ -165,7 +187,7 @@ a:active{
   height: 100px;
   background-color: black;
   position:absolute;
-  margin-top: 4910px;
+  margin-top: 5210px;
   }
   #flecha{
     width: 15%;
