--- a/web bien/consummov.css
+++ b/web bien/consummov.css
@@ -19,12 +19,13 @@
     margin: 0 0 0 50%;
     text-decoration-color: white;
   }
-  #arriba  a{
-    color: white;
-  }
-  a:active{
-    color: black pink;
-  }
+
+#arriba  a{
+  color: white;
+}
+a:active{
+  color: black pink;
+}
   .ca{
     color: white;
     width: 55px;
@@ -35,121 +36,143 @@
     z-index: 10;
 
   }
-    #secciones{
-      display: none;
-    }
+  #secciones{
+    display: none;
+  }
+  #logo{
+    width: 16%;
+    margin: 1% 0 0 1%;
+    float: left;
+    position: relative;
+    z-index: 10;
+  }
+  #medio {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    z-index: 6;
+  }
+  #menu {
+    width:60%;
+    float: left;
+    text-align: right;
+    position: relative;
+    z-index: 4;
+  }
+  #texto {
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 40px;
+    width: 60%;
+    margin: 5% 20% 0 20%;
+    text-align: center;
+    padding: 7px 0 0 0;
+    font-size: 1em;
+  }
+  #textos{
+    width: 100%;
+    height: 240px;
+    position: absolute;
+    margin-top: 20%;
+  }
+  #texto1{
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 40px;
+    width: 70%;
+    text-align: center;
+    padding: 7px 0 0 0;
+    margin: 10px 15% 0 15%;
+    font-size: 1em;
+  }
+  #fondo{
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
+  #blog{
+    width: 100%;
+    height: 700px;
+    position: absolute;
+    margin-top: -10px;
+    z-index: 15;
+  }
+  #nosotros{
+    width: 90%;
+    height: 100px;
+    padding-top: 50px;
+    margin: 0 5% 0 5%;
+    position: relative;
+    z-index: 6;
+  }
+  #text{
+    font-size: 1rem;
+    line-height: 1.2rem;
+    clear: both;
 
-    #logo{
-      width: 16%;
-      margin: 1% 0 0 1%;
-      float: left;
-      position: relative;
-      z-index: 10;
-    }
-    #medio {
-      width: 100%;
-      height: 100px;
-      position: absolute;
-      z-index: 6;
-    }
-    #text{
-      height: 220px;
-      clear: both;
-    }
-    #menu {
-      width:60%;
-      float: left;
-      text-align: right;
-      position: relative;
-      z-index: 4;
-    }
-    #texto {
-      background-color: rgba(255, 255, 255, 0.76);
-      height: 40px;
-      width: 60%;
-      margin: 5% 20% 0 20%;
-      text-align: center;
-      padding: 7px 0 0 0;
-      font-size: 1em;
-    }
-    #textos{
-      width: 100%;
-      height: 240px;
-      position: absolute;
-      margin-top: 20%;
-    }
-    #texto1{
-      background-color: rgba(255, 255, 255, 0.76);
-      height: 40px;
-      width: 70%;
-      text-align: center;
-      padding: 7px 0 0 0;
-      margin: 10px 15% 0 15%;
-      font-size: 1em;
-    }
-    #fondo{
-      width: 100%;
-      height: 100%;
-      z-index: 10;
-    }
-    #blog{
-      width: 100%;
-      height: 700px;
-      position: absolute;
-      margin-top: -10px;
-      z-index: 15;
-    }
+  }
+  #text1{
 
-    #nosotros{
-      width: 90%;
-      height: 100px;
-      padding-top: 50px;
-      margin: 0 5% 0 5%;
-      position: relative;
-      z-index: 6;
-    }
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text2{
+
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text3{
+    height: 20px;
+    clear: both;
+
+    border-bottom: 5px rgb(207, 214, 212) solid;
+  }
   #madame{
-      height: 790px;
+      height: 700px;
       padding: 20px 0 0 0;
       clear: both;
       width: 100%;
-      background-color: white;
-      border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+      
+      border-bottom: none;
   }
   #nunoya{
     clear: both;
     width: 100%;
-    background-color: white;
-    height: 750px;
+
+    height: 530px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+
+    border-bottom: none;
   }
   #norma{
     clear: both;
     width: 100%;
-    background-color: white;
-    height: 520px;
+
+    border-bottom: none;
+    height: 680px;
     padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #otonashi{
     clear: both;
     width: 100%;
-    background-color: white;
-    height: 750px;
-    padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
-  }
 
+    border-bottom: none;
+    height: 600px;
+    padding: 20px 0 0 0;
+
+  }
   #haiku{
     clear: both;
     width: 100%;
-    background-color: white;
-    height: 520px;
-    padding: 20px 0 0 0;
-    border-bottom: 5px rgba(209, 209, 202, 0.89) solid;
-  }
 
+    border-bottom: none;
+    height: 560px;
+    padding: 20px 0 0 0;
+
+  }
   .grande{
   width: 45%;
   height: 40%;
@@ -167,8 +190,8 @@
   width: 100%;
   height: 100px;
   background-color: black;
-  position: absolute;
-  margin-top: 4110px;
+  position:absolute;
+  margin-top: 4470px;
   }
   #flecha{
     width: 15%;
@@ -203,7 +226,7 @@
     text-decoration: none;
   }
   #nivel1-1{
-    background-color: red;
+
     width: 10%;
 
   }
@@ -215,12 +238,12 @@
     width: 85%;
     margin: 0 0% 0 0;
     z-index: 15;
-    background-color: blue;
     font-size: 0.8rem;
-    position: absolute;
-    bottom: 660px;
+
+
+
   }
-  #menu * { list-style:none; }
+  #menu * { list-style:none; text-align: right;}
   #menu li{ line-height:180%; }
   #menu li a{color:#222; }
   #menu li a:before{ content:"\025b8"; color:#ddd; display: none;}
