--- a/web bien/restaurantemov.css
+++ b/web bien/restaurantemov.css
@@ -13,21 +13,19 @@
     position: absolute;
     z-index: 10;
   }
-  #arriba  a{
-    color: white;
-  }
   #idioma{
     width: 50%;
     height: 50px;
     margin: 0 0 0 50%;
     text-decoration-color: white;
   }
-  #arriba  a{
-    color: white;
-  }
-  a:active{
-    color: black pink;
-  }
+
+#arriba  a{
+  color: white;
+}
+a:active{
+  color: black pink;
+}
   .ca{
     color: white;
     width: 55px;
@@ -38,88 +36,100 @@
     z-index: 10;
 
   }
-    #secciones{
-      display: none;
-    }
-
-    #logo{
-      width: 16%;
-      margin: 1% 0 0 1%;
-      float: left;
-      position: relative;
-      z-index: 10;
-    }
-    #medio {
-      width: 100%;
-      height: 100px;
-      position: absolute;
-      z-index: 6;
-    }
-    #text{
-      width: 100%;
-
-      height: 180px;
-      clear: both;
-    }
-    #menu {
-      width:60%;
-      float: left;
-      text-align: right;
-      position: relative;
-      z-index: 4;
-    }
-    #texto {
-      background-color: rgba(255, 255, 255, 0.76);
-      height: 40px;
-      width: 60%;
-      margin: 5% 20% 0 20%;
-      text-align: center;
-      padding: 7px 0 0 0;
-      font-size: 1em;
-    }
-    #textos{
-      width: 100%;
-      height: 240px;
-      position: absolute;
-      margin-top: 20%;
-    }
-    #texto1{
-      background-color: rgba(255, 255, 255, 0.76);
-      height: 40px;
-      width: 70%;
-      text-align: center;
-      padding: 7px 0 0 0;
-      margin: 10px 15% 0 15%;
-      font-size: 1em;
-    }
-    #fondo{
-      width: 100%;
-      height: 100%;
-      z-index: 10;
-    }
-    #blog{
-      width: 100%;
-      height: 700px;
-      position: absolute;
-      margin-top: -10px;
-      z-index: 15;
-    }
-
-    #nosotros{
-      width: 90%;
-      height: 100px;
-      padding-top: 50px;
-      margin: 0 5% 0 5%;
-      position: relative;
-      z-index: 6;
-    }
+  #secciones{
+    display: none;
+  }
+  #logo{
+    width: 16%;
+    margin: 1% 0 0 1%;
+    float: left;
+    position: relative;
+    z-index: 10;
+  }
+  #medio {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    z-index: 6;
+  }
+  #menu {
+    width:60%;
+    float: left;
+    text-align: right;
+    position: relative;
+    z-index: 4;
+  }
+  #texto {
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 40px;
+    width: 60%;
+    margin: 5% 20% 0 20%;
+    text-align: center;
+    padding: 7px 0 0 0;
+    font-size: 1em;
+  }
+  #textos{
+    width: 100%;
+    height: 240px;
+    position: absolute;
+    margin-top: 20%;
+  }
+  #texto1{
+    background-color: rgba(255, 255, 255, 0.76);
+    height: 40px;
+    width: 70%;
+    text-align: center;
+    padding: 7px 0 0 0;
+    margin: 10px 15% 0 15%;
+    font-size: 1em;
+  }
+  #fondo{
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+  }
+  #blog{
+    width: 100%;
+    height: 700px;
+    position: absolute;
+    margin-top: -10px;
+    z-index: 15;
+  }
   #nosotros{
     width: 90%;
     height: 100px;
     padding-top: 50px;
     margin: 0 5% 0 5%;
-    background-color: white;
+    position: relative;
+    z-index: 6;
   }
+  #text{
+    font-size: 1rem;
+    line-height: 1.2rem;
+    clear: both;
+
+  }
+  #text1{
+
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text2{
+
+    clear: both;
+
+    font-size: 1rem;
+    line-height: 1.2rem;
+  }
+  #text3{
+    height: 40px;
+    clear: both;
+
+    border-bottom: 5px rgb(207, 214, 212) solid;
+  }
+
   #madame{
       height: 670px;
       padding: 20px 0 0 0;
@@ -133,7 +143,7 @@
     background-color: white;
     height: 670px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #norma{
     clear: both;
@@ -141,7 +151,7 @@
     background-color: white;
     height: 700px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
   #otonashi{
     clear: both;
@@ -149,7 +159,7 @@
     background-color: white;
     height: 680px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
+
   }
 
   #haiku{
@@ -158,81 +168,88 @@
     background-color: white;
     height: 480px;
     padding: 20px 0 0 0;
-    border-top: 5px rgba(209, 209, 202, 0.89) solid;
-  }
 
-    .grande{
-    width: 95%;
-    height: 40%;
-    margin: 0 2% 5% 2%;
-    float: left;
-    }
-    .pequeña{
-      padding: 20px 0 0 0;
-      width: 31%;
-      height: 25%;
-      margin: 0 1% 5% 1%;
-      float: left;
-    }
-    #abajo{
-    width: 100%;
-    height: 100px;
-    background-color: black;
-    position: absolute;
-    margin-top: 7110px;
-    }
-    #flecha{
-      width: 15%;
-      height: 30px;
-      background-color: white;
-      border-radius: 50px;
-      text-align: center;
-      padding-top: 1px;
-      padding-left: 1px;
-      margin: -5% 43% 0 42%;
-      style-type: none;
-    }
-    #redes{
-      width: 100%;
-      margin: 2% 0% 0 0%;
-    }
-    .img{
-      width: 16%;
-      margin: 0 4% 0 4%;
-    }
-    .tiendas{
-    width: 100%;
-    height: 30px;
-    display: none;
-    list-style-type: none;
-    padding: 10px 0 0 0;
-    }
-    #secciones .secc:hover > .tiendas{
-      display: block;
-    }
-    a{
-      text-decoration: none;
-    }
-    #nivel2-1{
-    width: 10%;
-    height: 100px;
-    }
-    #menu{
-      width: 85%;
-      margin: 0 0% 0 0;
-      z-index: 15;
-      font-size: 0.8rem;
-    }
-    #menu * { list-style:none; }
-    #menu li{ line-height:180%; }
-    #menu li a{color:#222; text-decoration:none; }
-    #menu li a:before{ content:"\025b8"; color:#ddd; margin-right:4px;}
-    #menu input[name="list"] {
-      position: absolute;
-      left: -1000em;
-      }
-    #menu label:before{ content:"\025b8"; margin-right:4px;}
-    #menu input:checked ~ label:before{ content:"\025be";}
-    #menu .interior{display: none;}
-    #menu input:checked ~ ul{display:block;}
   }
+  .grande{
+  width: 45%;
+  height: 40%;
+  margin: 0 2% 5% 2%;
+  float: left;
+  }
+  .pequeña{
+    padding: 20px 0 0 0;
+    width: 31%;
+    height: 25%;
+    margin: 0 1% 5% 1%;
+    float: left;
+  }
+  #abajo{
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  position:absolute;
+  margin-top: 4470px;
+  }
+  #flecha{
+    width: 15%;
+    height: 30px;
+    background-color: white;
+    border-radius: 50px;
+    text-align: center;
+    padding-top: 1px;
+    padding-left: 1px;
+    margin: -5% 43% 0 42%;
+    style-type: none;
+  }
+  #redes{
+    width: 100%;
+    margin: 2% 0% 0 0%;
+  }
+  .img{
+    width: 16%;
+    margin: 0 4% 0 4%;
+  }
+  .tiendas{
+  width: 100%;
+  height: 30px;
+  display: none;
+  list-style-type: none;
+  padding: 10px 0 0 0;
+  }
+  #secciones .secc:hover > .tiendas{
+    display: block;
+  }
+  a{
+    text-decoration: none;
+  }
+  #nivel1-1{
+
+    width: 10%;
+
+  }
+  #nivel2-1{
+  width: 10%;
+  height: 100px;
+  }
+  #menu{
+    width: 85%;
+    margin: 0 0% 0 0;
+    z-index: 15;
+    font-size: 0.8rem;
+
+
+
+  }
+  #menu * { list-style:none; text-align: right;}
+  #menu li{ line-height:180%; }
+  #menu li a{color:#222; }
+  #menu li a:before{ content:"\025b8"; color:#ddd; display: none;}
+  #menu input[name="list"] {
+    position: absolute;
+    left: -1000em;
+    }
+  #menu label:before{ content:"\025b8"; display: none;}
+  #menu input:checked ~ label:before{ content:"\025be";}
+  #menu .interior{display: none;}
+  #menu input:checked ~ ul{display:block;}
+}
