--- a/web bien/consum.css
+++ b/web bien/consum.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:769px) {
 body{
   margin: 0 ;
   font-size: 18px;
@@ -202,4 +203,5 @@ padding: 10px 0 0 0;
 }
 a{
   text-decoration: none;
+}
 }
