--- a/web bien/restaurantes.css
+++ b/web bien/restaurantes.css
@@ -1,3 +1,4 @@
+@media screen and (min-width:769px) {
 body{
   margin: 0 ;
   font-size: 18px;
@@ -159,7 +160,9 @@ float: left;
   float: left;
 }
 
-
+#menu{
+   display: none;
+}
 #abajo{
 width: 100%;
 height: 200px;
@@ -201,4 +204,5 @@ padding: 10px 0 0 0;
 }
 a{
   text-decoration: none;
+}
 }
